# exchange-rate-analytics-py

./: .gitignore  README.md  docker-compose.yaml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  ci.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a9afd58ae797_initial_schema.py
backend/app/: main.py  seed.py
backend/app/analytics/: averages.py  forecast.py  matrices.py  matrix.py  service.py
backend/app/api/: exchange_rates.py
backend/app/api/schemas/: analytics.py
backend/app/api/v1/: api.py  router.py
backend/app/api/v1/routers/: analytics.py  exchange_rates.py  monthly_averages.py
backend/app/core/: config.py  database.py
backend/app/models/: exchange_rate.py  monthly_average.py
backend/app/repositories/: exchange_rate_repository.py  monthly_average_repository.py
backend/app/schemas/: exchange_rate.py  monthly_average.py
backend/app/services/: analytics_service.py  exchange_rate_calculator.py  exchange_rate_client.py  exchange_rate_service.py  monthly_average_service.py
backend/app/utils/: dates.py
backend/tests/: conftest.py
backend/tests/analytics/: test_averages.py  test_forecast.py  test_matrices.py  test_matrix.py
backend/tests/api/v1/routers/: test_analytics.py  test_exchange_rates.py  test_monthly_averages_router.py
backend/tests/repositories/: test_exchange_rate_repository.py
backend/tests/seeds/: monthly_averages_seed.py
backend/tests/services/: test_exchange_rate_calculator.py  test_exchange_rate_client.py  test_exchange_rate_service.py  test_monthly_average_service.py
backend/tests/utils/: test_dates.py
